--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.2</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
