--- a/pom.xml
+++ b/pom.xml
@@ -3,28 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>gr.codehub</groupId>
     <artifactId>sacchon</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-
-    <!-- To use the plugin goals in your POM or parent POM -->
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>3.3.1</version>
-            </plugin>
-        </plugins>
-    </build>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>8</java.version>
+        <java.version>1.8</java.version>
         <hibernate.version>5.4.1.Final</hibernate.version>
         <lombok.version>1.18.20</lombok.version>
         <restlet-version>2.4.3</restlet-version>
@@ -32,7 +19,12 @@
 
     <dependencies>
 
-
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-deploy-plugin -->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-deploy-plugin</artifactId>
+            <version>2.8.2</version>
+        </dependency>
         <!-- restlet libraries -->
         <dependency>
             <groupId>org.restlet.jse</groupId>
@@ -100,7 +92,7 @@
         <repository>
             <id>maven-restlet</id>
             <name>Public online Restlet repository</name>
-            <url>http://maven.restlet.talend.com</url>
+            <url>https://maven.restlet.talend.com</url>
         </repository>
         <repository>
             <id>mulesoft-releases</id>
@@ -108,8 +100,5 @@
             <url>https://repository-master.mulesoft.org/releases/</url>
         </repository>
     </repositories>
-
-
-
 
 </project>
